<?xml version="1.0"?>
<package format="2">
  <name>mcu_pub</name>
  <version>0.0.1</version>
  <description>CLI Publisher to Motor Control Unit</description>
  <maintainer email="theodusbutler@gmail.com">Theo Butler</maintainer>
  <license>BSD-2-Clause</license>

  <author email="theodusbutler@gmail.com">Theo Butler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
